--- a/helpers/_tokens.scss
+++ b/helpers/_tokens.scss
@@ -13,3 +13,8 @@ $shadow-color-invert: #44aeff;
 $background-color: white;
 $background-color-invert: #050d1b;
 $mobile-navigation-unfolded-height: 24rem;
+$request-status-z-index: 1000;
+$navigation-bar-z-index: 999;
+$cookie-banner-z-index: 500;
+$navigation-bar-menu-z-index: 998;
+$navigation-bar-scrim-z-index: 997;
